# San3Dbox

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
assets/shaders/: default.frag  default.vert
include/San3Dbox/client/: Client.hpp
include/San3Dbox/interface/: PlayerG.hpp  Window.hpp  WorldRender.hpp
include/San3Dbox/server/: Server.hpp  World.hpp
include/San3Dbox/util/: Camera.hpp  Shader.hpp
src/: main.cpp
src/client/: Client.cpp  Window.cpp
src/interface/: PlayerG.cpp  WorldRender.cpp
src/server/: Server.cpp  World.cpp
